attentions fixes